python/rregadmin/hive/key_list_cell_wrapper.py

# generated by 'xml2py'
# flags '-c -d -v -k defst -lrregadmin -m rregadmin.util.glib_wrapper -m rregadmin.util.icu_wrapper -m rregadmin.util.path_wrapper -m rregadmin.util.icu_wrapper -m rregadmin.util.path_info_wrapper -m rregadmin.util.ustring_wrapper -m rregadmin.util.offset_wrapper -m rregadmin.util.value_wrapper -m rregadmin.util.ustring_list_wrapper -m rregadmin.hive.types_wrapper -r ^key_list_cell_.* -r ^KeyListCellAddReturn$ -o key_list_cell_wrapper.py key_list_cell_wrapper.xml'
from ctypes import *

from rregadmin.hive.types_wrapper import KeyListCell
from rregadmin.hive.types_wrapper import Hive
from rregadmin.util.offset_wrapper import offset
_libraries = {}
_libraries['librregadmin.so.1'] = CDLL('librregadmin.so.1')
from rregadmin.util.ustring_list_wrapper import gboolean
from rregadmin.hive.types_wrapper import Cell
from rregadmin.hive.types_wrapper import guint32
from rregadmin.util.glib_wrapper import guint16
STRING = c_char_p
from rregadmin.hive.types_wrapper import KeyCell


# ../../../rregadmin/hive/key_list_cell.h 51
key_list_cell_alloc = _libraries['librregadmin.so.1'].key_list_cell_alloc
key_list_cell_alloc.restype = POINTER(KeyListCell)
# key_list_cell_alloc(hdesc, p, id, count)
key_list_cell_alloc.argtypes = [POINTER(Hive), offset, c_int, c_int]
key_list_cell_alloc.__doc__ = \
"""KeyListCell * key_list_cell_alloc(Hive * hdesc, offset p, int id, int count)
../../../rregadmin/hive/key_list_cell.h:51"""
# ../../../rregadmin/hive/key_list_cell.h 58
key_list_cell_alloc_copy = _libraries['librregadmin.so.1'].key_list_cell_alloc_copy
key_list_cell_alloc_copy.restype = POINTER(KeyListCell)
# key_list_cell_alloc_copy(hdesc, p, count)
key_list_cell_alloc_copy.argtypes = [POINTER(Hive), POINTER(KeyListCell), c_int]
key_list_cell_alloc_copy.__doc__ = \
"""KeyListCell * key_list_cell_alloc_copy(Hive * hdesc, unknown * p, int count)
../../../rregadmin/hive/key_list_cell.h:58"""
# ../../../rregadmin/hive/key_list_cell.h 64
key_list_cell_unalloc = _libraries['librregadmin.so.1'].key_list_cell_unalloc
key_list_cell_unalloc.restype = gboolean
# key_list_cell_unalloc(klc, in_recursive)
key_list_cell_unalloc.argtypes = [POINTER(KeyListCell), gboolean]
key_list_cell_unalloc.__doc__ = \
"""gboolean key_list_cell_unalloc(KeyListCell * klc, gboolean in_recursive)
../../../rregadmin/hive/key_list_cell.h:64"""
# ../../../rregadmin/hive/key_list_cell.h 70
key_list_cell_from_cell = _libraries['librregadmin.so.1'].key_list_cell_from_cell
key_list_cell_from_cell.restype = POINTER(KeyListCell)
# key_list_cell_from_cell(p)
key_list_cell_from_cell.argtypes = [POINTER(Cell)]
key_list_cell_from_cell.__doc__ = \
"""KeyListCell * key_list_cell_from_cell(Cell * p)
../../../rregadmin/hive/key_list_cell.h:70"""
# ../../../rregadmin/hive/key_list_cell.h 76
key_list_cell_to_cell = _libraries['librregadmin.so.1'].key_list_cell_to_cell
key_list_cell_to_cell.restype = POINTER(Cell)
# key_list_cell_to_cell(lx)
key_list_cell_to_cell.argtypes = [POINTER(KeyListCell)]
key_list_cell_to_cell.__doc__ = \
"""Cell * key_list_cell_to_cell(KeyListCell * lx)
../../../rregadmin/hive/key_list_cell.h:76"""
# ../../../rregadmin/hive/key_list_cell.h 82
key_list_cell_is_valid = _libraries['librregadmin.so.1'].key_list_cell_is_valid
key_list_cell_is_valid.restype = gboolean
# key_list_cell_is_valid(klc)
key_list_cell_is_valid.argtypes = [POINTER(KeyListCell)]
key_list_cell_is_valid.__doc__ = \
"""gboolean key_list_cell_is_valid(unknown * klc)
../../../rregadmin/hive/key_list_cell.h:82"""
# ../../../rregadmin/hive/key_list_cell.h 88
key_list_cell_get_size = _libraries['librregadmin.so.1'].key_list_cell_get_size
key_list_cell_get_size.restype = guint32
# key_list_cell_get_size(klc)
key_list_cell_get_size.argtypes = [POINTER(KeyListCell)]
key_list_cell_get_size.__doc__ = \
"""guint32 key_list_cell_get_size(unknown * klc)
../../../rregadmin/hive/key_list_cell.h:88"""
# ../../../rregadmin/hive/key_list_cell.h 98
key_list_cell_get_number_of_sublists = _libraries['librregadmin.so.1'].key_list_cell_get_number_of_sublists
key_list_cell_get_number_of_sublists.restype = guint32
# key_list_cell_get_number_of_sublists(klc)
key_list_cell_get_number_of_sublists.argtypes = [POINTER(KeyListCell)]
key_list_cell_get_number_of_sublists.__doc__ = \
"""guint32 key_list_cell_get_number_of_sublists(unknown * klc)
../../../rregadmin/hive/key_list_cell.h:98"""
# ../../../rregadmin/hive/key_list_cell.h 106
key_list_cell_get_sublist = _libraries['librregadmin.so.1'].key_list_cell_get_sublist
key_list_cell_get_sublist.restype = POINTER(KeyListCell)
# key_list_cell_get_sublist(klc, in_entry)
key_list_cell_get_sublist.argtypes = [POINTER(KeyListCell), guint32]
key_list_cell_get_sublist.__doc__ = \
"""KeyListCell * key_list_cell_get_sublist(KeyListCell * klc, guint32 in_entry)
../../../rregadmin/hive/key_list_cell.h:106"""
# ../../../rregadmin/hive/key_list_cell.h 112
key_list_cell_get_capacity = _libraries['librregadmin.so.1'].key_list_cell_get_capacity
key_list_cell_get_capacity.restype = guint32
# key_list_cell_get_capacity(klc)
key_list_cell_get_capacity.argtypes = [POINTER(KeyListCell)]
key_list_cell_get_capacity.__doc__ = \
"""guint32 key_list_cell_get_capacity(unknown * klc)
../../../rregadmin/hive/key_list_cell.h:112"""
# ../../../rregadmin/hive/key_list_cell.h 120
key_list_cell_get_type = _libraries['librregadmin.so.1'].key_list_cell_get_type
key_list_cell_get_type.restype = guint16
# key_list_cell_get_type(klc)
key_list_cell_get_type.argtypes = [POINTER(KeyListCell)]
key_list_cell_get_type.__doc__ = \
"""guint16 key_list_cell_get_type(unknown * klc)
../../../rregadmin/hive/key_list_cell.h:120"""
# ../../../rregadmin/hive/key_list_cell.h 126
key_list_cell_delete_entry = _libraries['librregadmin.so.1'].key_list_cell_delete_entry
key_list_cell_delete_entry.restype = gboolean
# key_list_cell_delete_entry(lx, in_index)
key_list_cell_delete_entry.argtypes = [POINTER(KeyListCell), guint32]
key_list_cell_delete_entry.__doc__ = \
"""gboolean key_list_cell_delete_entry(KeyListCell * lx, guint32 in_index)
../../../rregadmin/hive/key_list_cell.h:126"""
# ../../../rregadmin/hive/key_list_cell.h 132
key_list_cell_delete_entry_str = _libraries['librregadmin.so.1'].key_list_cell_delete_entry_str
key_list_cell_delete_entry_str.restype = gboolean
# key_list_cell_delete_entry_str(lx, name)
key_list_cell_delete_entry_str.argtypes = [POINTER(KeyListCell), STRING]
key_list_cell_delete_entry_str.__doc__ = \
"""gboolean key_list_cell_delete_entry_str(KeyListCell * lx, unknown * name)
../../../rregadmin/hive/key_list_cell.h:132"""
# ../../../rregadmin/hive/key_list_cell.h 138
key_list_cell_get_entry = _libraries['librregadmin.so.1'].key_list_cell_get_entry
key_list_cell_get_entry.restype = POINTER(KeyCell)
# key_list_cell_get_entry(lx, in_index)
key_list_cell_get_entry.argtypes = [POINTER(KeyListCell), guint32]
key_list_cell_get_entry.__doc__ = \
"""KeyCell * key_list_cell_get_entry(unknown * lx, guint32 in_index)
../../../rregadmin/hive/key_list_cell.h:138"""
# ../../../rregadmin/hive/key_list_cell.h 145
key_list_cell_get_entry_str = _libraries['librregadmin.so.1'].key_list_cell_get_entry_str
key_list_cell_get_entry_str.restype = POINTER(KeyCell)
# key_list_cell_get_entry_str(lx, name)
key_list_cell_get_entry_str.argtypes = [POINTER(KeyListCell), STRING]
key_list_cell_get_entry_str.__doc__ = \
"""KeyCell * key_list_cell_get_entry_str(unknown * lx, unknown * name)
../../../rregadmin/hive/key_list_cell.h:145"""

# values for enumeration 'KeyListCellAddReturn'
KLC_ADD_REPLACED = 0
KLC_ADD_ADDED = 1
KLC_ADD_ERROR = 2
KeyListCellAddReturn = c_int # enum
# ../../../rregadmin/hive/key_list_cell.h 174
key_list_cell_add_entry = _libraries['librregadmin.so.1'].key_list_cell_add_entry
key_list_cell_add_entry.restype = KeyListCellAddReturn
# key_list_cell_add_entry(lx, parent, child)
key_list_cell_add_entry.argtypes = [POINTER(KeyListCell), POINTER(KeyCell), POINTER(KeyCell)]
key_list_cell_add_entry.__doc__ = \
"""KeyListCellAddReturn key_list_cell_add_entry(KeyListCell * lx, KeyCell * parent, KeyCell * child)
../../../rregadmin/hive/key_list_cell.h:174"""
# ../../../rregadmin/hive/key_list_cell.h 182
key_list_cell_debug_print = _libraries['librregadmin.so.1'].key_list_cell_debug_print
key_list_cell_debug_print.restype = None
# key_list_cell_debug_print(lxkey)
key_list_cell_debug_print.argtypes = [POINTER(KeyListCell)]
key_list_cell_debug_print.__doc__ = \
"""void key_list_cell_debug_print(KeyListCell * lxkey)
../../../rregadmin/hive/key_list_cell.h:182"""
__all__ = ['key_list_cell_get_number_of_sublists', 'KLC_ADD_ADDED',
           'key_list_cell_delete_entry', 'key_list_cell_alloc',
           'key_list_cell_from_cell', 'key_list_cell_alloc_copy',
           'KeyListCellAddReturn', 'key_list_cell_get_type',
           'key_list_cell_delete_entry_str', 'key_list_cell_to_cell',
           'KLC_ADD_ERROR', 'key_list_cell_unalloc',
           'key_list_cell_get_sublist', 'key_list_cell_add_entry',
           'key_list_cell_get_capacity', 'key_list_cell_get_size',
           'key_list_cell_is_valid', 'key_list_cell_get_entry',
           'key_list_cell_get_entry_str', 'key_list_cell_debug_print',
           'KLC_ADD_REPLACED']
